Wed Dec 17 18:00:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* inits.c (rb_vm_call_inits): no longer passes current vm.

Wed Dec 10 16:03:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_install_altstack): does nothing unless using
	  sigaltstack.

Tue Dec  9 13:33:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each), gc.c (assign_heap_slot),
	  (gc_mark_children), parse.y (vtable_alloc, vtable_free, vtable_add),
	  proc.c (proc_to_s), thread.c (terminate_i, rb_thread_terminate_all),
	  (thread_start_func_2, blocking_region_begin, blocking_region_end),
	  (rb_thread_kill), thread_pthread.c (native_thread_create),
	  (ubf_pthread_cond_signal), vm.c (check_env, thread_free), vm_dump.c
	  (vm_env_dump_raw, vm_stack_dump_each, vm_thread_dump_state),
	  (vm_call0): use void pointer for %p.

	* cont.c (fiber_status), template/insns.inc.tmpl (ruby_vminsn_type),
	  vm_insnhelper.h (BOP): ISO C forbids comma at end of enumerator
	  list.

	* vm_insnhelper.c (check_cfunc): use function pointer.

Tue Dec  9 13:23:55 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/curses.c (curses_use_default_colors): add new
	  method.  a patch from Giancarlo F Bellido
	  <support at coaxialhost.com> in [ruby-core:20434].

	* ext/curses/curses.c (curses_tabsize_set): ditto.

	* ext/curses/curses.c (curses_tabsize_get): ditto.

Tue Dec  9 12:08:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* .gdbinit (rp): fixed typo for T_STRUCT.

Tue Dec  9 11:50:46 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* pack.c (pack_pck): fixed [ruby-dev:37295]. 
	  Array#pack always has returned an US-ASCII string when
	  the given format ended with 'u', 'M' or 'm'.

Tue Dec  9 03:21:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: fix for continued lines.  based on a patch from
	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:20420].

Tue Dec  9 00:54:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
