@@ -53,9 +53,14 @@ ruby_native_thread_yield(void)
 static void
 Init_native_thread(void)
 {
+    ruby_native_thread_key = TlsAlloc();
+}
+
+static void
+InitVM_native_thread(void)
+{
     rb_thread_t *th = GET_THREAD();
 
-    ruby_native_thread_key = TlsAlloc();
     DuplicateHandle(GetCurrentProcess(),
 		    GetCurrentThread(),
 		    GetCurrentProcess(),
